# libBigWig

./: .gitignore  CMakeLists.txt  Makefile  _cmake.py  io.c
cmake/: FindLibZ.cmake  ToolchainMingw64.cmake  cmakelists.py  generate.py
test/: test2.py
